[package]
name = "json-to-csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

json = { git = "https://github.com/Pumahawk/json_rust.git", branch="master" }

[patch."https://github.com/Pumahawk/json_rust.git"]
json = { path = "../json" }
